Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16038

Assertion `map->n_bits > 0' failed (my_bitmap.c:386: bitmap_is_clear_all)

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3(EOL)
    • 10.3.7
    • Optimizer
    • None

    Description

      with t as (values (),()) select 1 from t;
      

      mysqld: /home/alice/git/10.3/mysys/my_bitmap.c:386: bitmap_is_clear_all: Assertion `map->n_bits > 0' failed.
      180426 13:54:24 [ERROR] mysqld got signal 6 ;
      Server version: 10.3.7-MariaDB-debug-log
       
      stack_bottom = 0x7f6f9a0e5e70 thread_stack 0x49000
      mysys/stacktrace.c:269(my_print_stacktrace)[0x56018322836f]
      sql/signal_handler.cc:168(handle_fatal_signal)[0x560182a6c2a8]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x11390)[0x7f6fa08e6390]
      linux/raise.c:54(__GI_raise)[0x7f6f9fc9f428]
      stdlib/abort.c:91(__GI_abort)[0x7f6f9fca102a]
      assert/assert.c:92(__assert_fail_base)[0x7f6f9fc97bd7]
      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f6f9fc97c82]
      mysys/my_bitmap.c:388(bitmap_is_clear_all)[0x56018321679d]
      sql/sql_select.cc:4796(make_join_statistics(JOIN*, List<TABLE_LIST>&, st_dynamic_array*))[0x5601827dad18]
      sql/sql_select.cc:1848(JOIN::optimize_inner())[0x5601827d0765]
      sql/sql_select.cc:1431(JOIN::optimize())[0x5601827cf02d]
      sql/sql_select.cc:4140(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x5601827d874a]
      sql/sql_select.cc:382(handle_select(THD*, LEX*, select_result*, unsigned long))[0x5601827cad7d]
      sql/sql_parse.cc:6539(execute_sqlcom_select(THD*, TABLE_LIST*))[0x560182795ed4]
      sql/sql_parse.cc:3768(mysql_execute_command(THD*))[0x56018278c366]
      sql/sql_parse.cc:8001(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x560182799899]
      sql/sql_parse.cc:1848(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x560182786dbd]
      sql/sql_parse.cc:1391(do_command(THD*))[0x5601827857f5]
      sql/sql_connect.cc:1402(do_handle_one_connection(CONNECT*))[0x5601828e822b]
      sql/sql_connect.cc:1309(handle_one_connection)[0x5601828e7fab]
      perfschema/pfs.cc:1864(pfs_spawn_thread)[0x560182ca5b5c]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f6fa08dc6ba]
      x86_64/clone.S:111(clone)[0x7f6f9fd7141d]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f6f50014ea0): with t as (values (),()) select 1 from t
      Connection ID (thread ID): 9
      Status: NOT_KILLED
      

      Thread 1 (Thread 0x7f6f9a0e6700 (LWP 30058)):
      #0  __pthread_kill (threadid=<optimized out>, signo=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:62
      #1  0x0000560183228461 in my_write_core (sig=6) at /home/alice/git/10.3/mysys/stacktrace.c:481
      #2  0x0000560182a6c6d1 in handle_fatal_signal (sig=6) at /home/alice/git/10.3/sql/signal_handler.cc:305
      #3  <signal handler called>
      #4  0x00007f6f9fc9f428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
      #5  0x00007f6f9fca102a in __GI_abort () at abort.c:89
      #6  0x00007f6f9fc97bd7 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x560183639a18 "map->n_bits > 0", file=file@entry=0x560183639910 "/home/alice/git/10.3/mysys/my_bitmap.c", line=line@entry=386, function=function@entry=0x560183639bc0 <__PRETTY_FUNCTION__.12096> "bitmap_is_clear_all") at assert.c:92
      #7  0x00007f6f9fc97c82 in __GI___assert_fail (assertion=0x560183639a18 "map->n_bits > 0", file=0x560183639910 "/home/alice/git/10.3/mysys/my_bitmap.c", line=386, function=0x560183639bc0 <__PRETTY_FUNCTION__.12096> "bitmap_is_clear_all") at assert.c:101
      #8  0x000056018321679d in bitmap_is_clear_all (map=0x7f6f5000d8c8) at /home/alice/git/10.3/mysys/my_bitmap.c:386
      #9  0x00005601827dad18 in make_join_statistics (join=0x7f6f50016538, tables_list=..., keyuse_array=0x7f6f50016828) at /home/alice/git/10.3/sql/sql_select.cc:4797
      #10 0x00005601827d0765 in JOIN::optimize_inner (this=0x7f6f50016538) at /home/alice/git/10.3/sql/sql_select.cc:1848
      #11 0x00005601827cf02d in JOIN::optimize (this=0x7f6f50016538) at /home/alice/git/10.3/sql/sql_select.cc:1431
      #12 0x00005601827d874a in mysql_select (thd=0x7f6f50000b00, tables=0x7f6f50015e00, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f6f50016518, unit=0x7f6f50004948, select_lex=0x7f6f500050c0) at /home/alice/git/10.3/sql/sql_select.cc:4140
      #13 0x00005601827cad7d in handle_select (thd=0x7f6f50000b00, lex=0x7f6f50004880, result=0x7f6f50016518, setup_tables_done_option=0) at /home/alice/git/10.3/sql/sql_select.cc:382
      #14 0x0000560182795ed4 in execute_sqlcom_select (thd=0x7f6f50000b00, all_tables=0x7f6f50015e00) at /home/alice/git/10.3/sql/sql_parse.cc:6539
      #15 0x000056018278c366 in mysql_execute_command (thd=0x7f6f50000b00) at /home/alice/git/10.3/sql/sql_parse.cc:3768
      #16 0x0000560182799899 in mysql_parse (thd=0x7f6f50000b00, rawbuf=0x7f6f50014ea0 "with t as (values (),()) select 1 from t", length=40, parser_state=0x7f6f9a0e55d0, is_com_multi=false, is_next_command=false) at /home/alice/git/10.3/sql/sql_parse.cc:8001
      #17 0x0000560182786dbd in dispatch_command (command=COM_QUERY, thd=0x7f6f50000b00, packet=0x7f6f50167221 "with t as (values (),()) select 1 from t", packet_length=40, is_com_multi=false, is_next_command=false) at /home/alice/git/10.3/sql/sql_parse.cc:1846
      #18 0x00005601827857f5 in do_command (thd=0x7f6f50000b00) at /home/alice/git/10.3/sql/sql_parse.cc:1391
      #19 0x00005601828e822b in do_handle_one_connection (connect=0x5601858f5e90) at /home/alice/git/10.3/sql/sql_connect.cc:1402
      #20 0x00005601828e7fab in handle_one_connection (arg=0x5601858f5e90) at /home/alice/git/10.3/sql/sql_connect.cc:1308
      #21 0x0000560182ca5b5c in pfs_spawn_thread (arg=0x560185997230) at /home/alice/git/10.3/storage/perfschema/pfs.cc:1862
      #22 0x00007f6fa08dc6ba in start_thread (arg=0x7f6f9a0e6700) at pthread_create.c:333
      #23 0x00007f6f9fd7141d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      

      Attachments

        Activity

          People

            igor Igor Babaev (Inactive)
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.