MDEV-16038 Assertion `map->n_bits > 0' failed (my_bitmap.c:386: bitmap_is_clear_all)

Rows with no elements are not allowed in a table value constructor
unless it is used in an INSERT statement.